force-app/main/default/objects/TimeSheetEntry/fields/CoordenadasInicio__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasInicio__c</fullName>
    <label>Coordenadas Inicio</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>