force-app/main/default/objects/TimeSheetEntry/fields/CoordenadasTermino__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasTermino__c</fullName>
    <label>Coordenadas Termino</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>