force-app/main/default/objects/TimeSheetEntry/fields/EncerradoSistema__c.field-meta.xml
<CustomField>
    <fullName>EncerradoSistema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encerrado pelo sistema</label>
    <type>Checkbox</type>
</CustomField>